// Vitest Snapshot v1

exports[`should compile child component 1`] = `
"import { $$_clone, $$_create_markers_walker, $$_insert_at_marker, $$_create_component, $$_create_template } from \\"@maverick-js/elements/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div><!$></div>\`);
(() => {
  const $$_root = $$_clone($$_templ),
    $$_walker = $$_create_markers_walker($$_root),
    $$_comp = $$_walker.nextNode();

  $$_insert_at_marker($$_comp, $$_create_component(Component));

  return $$_root.firstChild;
})()"
`;

exports[`should compile child component containing expression 1`] = `
"import { $$_clone, $$_create_markers_walker, $$_insert_at_marker, $$_create_template, $$_create_component } from \\"@maverick-js/elements/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div><!$></div>\`),
  $$_templ_2 = /* #__PURE__ */ $$_templ;
(() => {
  const $$_root = $$_clone($$_templ),
    $$_walker = $$_create_markers_walker($$_root),
    $$_comp = $$_walker.nextNode();

  $$_insert_at_marker(
    $$_comp,
    $$_create_component(Component, {
      get children() {
        return () =>
          (() => {
            const $$_root = $$_clone($$_templ_2),
              $$_walker = $$_create_markers_walker($$_root),
              $$_expr = $$_walker.nextNode();

            $$_insert_at_marker($$_expr, id);

            return $$_root.firstChild;
          })();
      },
    }),
  );

  return $$_root.firstChild;
})()"
`;

exports[`should compile child component with element children 1`] = `
"import { $$_clone, $$_create_markers_walker, $$_create_template, $$_insert_at_marker, $$_create_component } from \\"@maverick-js/elements/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div><!$></div>\`),
  $$_templ_2 = /* #__PURE__ */ $$_create_template(\`<div></div>\`);
(() => {
  const $$_root = $$_clone($$_templ),
    $$_walker = $$_create_markers_walker($$_root),
    $$_comp = $$_walker.nextNode();

  $$_insert_at_marker(
    $$_comp,
    $$_create_component(Component, {
      get children() {
        return $$_clone($$_templ_2, 1 /* ELEMENT */);
      },
    }),
  );

  return $$_root.firstChild;
})()"
`;

exports[`should compile child component with fragment children 1`] = `
"import { $$_clone, $$_create_markers_walker, $$_create_template, $$_insert_at_marker, $$_create_component } from \\"@maverick-js/elements/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div><!$></div>\`),
  $$_templ_2 = /* #__PURE__ */ $$_create_template(\`<div id=\\"foo\\"></div><div id=\\"bar\\"></div>\`);
(() => {
  const $$_root = $$_clone($$_templ),
    $$_walker = $$_create_markers_walker($$_root),
    $$_comp = $$_walker.nextNode();

  $$_insert_at_marker(
    $$_comp,
    $$_create_component(Component, {
      get children() {
        return $$_clone($$_templ_2);
      },
    }),
  );

  return $$_root.firstChild;
})()"
`;

exports[`should compile child component with multiple spreads 1`] = `
"import { $$_clone, $$_create_markers_walker, $$_insert_at_marker, $$_create_component, $$_merge_props, $$_create_template } from \\"@maverick-js/elements/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div><!$></div>\`);
(() => {
  const $$_root = $$_clone($$_templ),
    $$_walker = $$_create_markers_walker($$_root),
    $$_comp = $$_walker.nextNode();

  $$_insert_at_marker($$_comp, $$_create_component(Component, $$_merge_props(props, propsTwo, propsThree)));

  return $$_root.firstChild;
})()"
`;

exports[`should compile child component with props 1`] = `
"import { $$_clone, $$_create_markers_walker, $$_insert_at_marker, $$_create_component, $$_create_template } from \\"@maverick-js/elements/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div><!$></div>\`);
(() => {
  const $$_root = $$_clone($$_templ),
    $$_walker = $$_create_markers_walker($$_root),
    $$_comp = $$_walker.nextNode();

  $$_insert_at_marker($$_comp, $$_create_component(Component, { foo: \\"a\\", bar: id }));

  return $$_root.firstChild;
})()"
`;

exports[`should compile child component with props and children 1`] = `
"import { $$_clone, $$_create_markers_walker, $$_create_template, $$_insert_at_marker, $$_create_component } from \\"@maverick-js/elements/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div><!$></div>\`),
  $$_templ_2 = /* #__PURE__ */ $$_create_template(\`<div></div>\`);
(() => {
  const $$_root = $$_clone($$_templ),
    $$_walker = $$_create_markers_walker($$_root),
    $$_comp = $$_walker.nextNode();

  $$_insert_at_marker(
    $$_comp,
    $$_create_component(Component, {
      foo: id,
      get children() {
        return $$_clone($$_templ_2, 1 /* ELEMENT */);
      },
    }),
  );

  return $$_root.firstChild;
})()"
`;

exports[`should compile child component with props and spread 1`] = `
"import { $$_clone, $$_create_markers_walker, $$_insert_at_marker, $$_create_component, $$_merge_props, $$_create_template } from \\"@maverick-js/elements/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div><!$></div>\`);
(() => {
  const $$_root = $$_clone($$_templ),
    $$_walker = $$_create_markers_walker($$_root),
    $$_comp = $$_walker.nextNode();

  $$_insert_at_marker(
    $$_comp,
    $$_create_component(
      Component,
      $$_merge_props(props, {
        foo: \\"...\\",
        get bar() {
          return id() + 10;
        },
      }),
    ),
  );

  return $$_root.firstChild;
})()"
`;

exports[`should compile child component with spread 1`] = `
"import { $$_clone, $$_create_markers_walker, $$_insert_at_marker, $$_create_component, $$_merge_props, $$_create_template } from \\"@maverick-js/elements/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div><!$></div>\`);
(() => {
  const $$_root = $$_clone($$_templ),
    $$_walker = $$_create_markers_walker($$_root),
    $$_comp = $$_walker.nextNode();

  $$_insert_at_marker($$_comp, $$_create_component(Component, props));

  return $$_root.firstChild;
})()"
`;

exports[`should compile child component with text children 1`] = `
"import { $$_create_component } from \\"@maverick-js/elements/dom\\";
$$_create_component(Component, {
  get children() {
    return \\"foo 10 bar 20 baz\\";
  },
})"
`;

exports[`should compile root component 1`] = `
"import { $$_create_component } from \\"@maverick-js/elements/dom\\";
$$_create_component(Component)"
`;

exports[`should compile root expression  1`] = `
"import { $$_clone, $$_create_markers_walker, $$_insert_at_marker, $$_create_template } from \\"@maverick-js/elements/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div><!$></div>\`);

function Component() {
  return id > 10 ? (() => {
  const $$_root = $$_clone($$_templ),
    $$_walker = $$_create_markers_walker($$_root),
    $$_expr = $$_walker.nextNode();

  $$_insert_at_marker($$_expr, id);

  return $$_root.firstChild;
})() : 20;
}
  "
`;

exports[`should insert multiple child components 1`] = `
"import { $$_clone, $$_create_markers_walker, $$_insert_at_marker, $$_create_component, $$_create_template } from \\"@maverick-js/elements/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div><!$><!$><div></div><!$></div>\`);

  (() => {
  const $$_root = $$_clone($$_templ),
    $$_walker = $$_create_markers_walker($$_root),
    $$_comp = $$_walker.nextNode(),
    $$_comp_2 = $$_walker.nextNode(),
    $$_comp_3 = $$_walker.nextNode();

  $$_insert_at_marker($$_comp, $$_create_component(Component));
  $$_insert_at_marker($$_comp_2, $$_create_component(Component));
  $$_insert_at_marker($$_comp_3, $$_create_component(Component));

  return $$_root.firstChild;
})()"
`;
